--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build
         working-directory: frontend
-        run: npm run build
+        run: npm run predeploy
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
